@@ -1,5 +1,8 @@
 2013-01-10  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>
 
+	* src/ascii-xfr.c, src/config.c, src/dial.c, src/help.c, src/updown.c, src/wkeys.c: Fix warnings with more modern warning options ("hardening").
+
+
 	* po/fi.po: Update from Translation Project.
 
 2013-01-09  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>
